# cel-go

cel/: BUILD.bazel  cel.go  cel_test.go  decls.go  env_test.go  folding.go  folding_test.go  optimizer_test.go  options.go  program.go  program_async_test.go  validator.go  validator_test.go
cel/async/: BUILD.bazel  async.go  async_test.go
common/decls/: decls.go  decls_test.go
common/stdlib/: standard.go
common/types/: bytes.go  bytes_test.go  string.go  string_test.go  timestamp.go  timestamp_test.go  unknown.go
examples/: README.md  example_cel_advanced_test.go  example_cel_collections_test.go  example_cel_compile_test.go  example_cel_context_eval_test.go  example_cel_custom_functions_test.go  example_cel_custom_macros_test.go  example_cel_execution_cost_test.go  example_cel_logic_and_conditions_test.go  example_cel_native_structs_test.go  example_cel_operators_test.go  example_cel_protocol_buffers_test.go  example_cel_strings_and_numbers_test.go  example_cel_time_test.go  example_cel_transforming_data_test.go  example_cel_type_conversions_test.go
ext/: README.md  bindings_test.go  math.go  math_test.go  native.go  native_test.go
interpreter/: BUILD.bazel  activation.go  activation_test.go  async.go  async_test.go  attribute_patterns.go  attribute_patterns_test.go  attributes_test.go  frame.go  frame_test.go  interpretable.go  interpreter.go  interpreter_test.go  planner.go  prune_test.go  runtimecost.go  runtimecost_test.go
test/: BUILD.bazel  async.go
