load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "async.go",
    ],
    importpath = "github.com/google/cel-go/cel/async",
    visibility = ["//visibility:public"],
    deps = [
        "//common/decls:go_default_library",
        "//common/functions:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//interpreter:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "async_test.go",
    ],
    deps = [
        ":go_default_library",
        "//common/decls:go_default_library",
        "//common/functions:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
    ],
)
